welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: not found: value y
			T(x)=T(x-1)+1;a=y;
                                        ^