welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var a=0; var T = new Array[Int](num+1);T(0)=0
	for (x<-1 to num) {
		if (a==0) {
			T(x)=T(x-1)+1;a=y;
		}else {
			T(x)=T(x-1)
		}
		a=a-1
	}
	return T(num)
	 	
}
